index.html style.css creacion de estilos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Reto1 Semana 2">
 		<meta name="keywords" content="html5, yurak, arequipa">
 		<title>Formulario de Ingreso</title>
+        <style></style>
 	</head>
 	<body>
 		<header>
@@ -19,50 +20,14 @@
 		</nav>
 		<main>
 			<h2>Nuevo Formulario</h2>
-			<form>
+			<form action="">
                 <fieldset>
-                    <legend>Email</legend>
-                    <input type="email" placeholder="email">
+                    <input name="form_email" type="email" placeholder="Email" required><br>
+                    <input name="form_pass" type="password" placeholder="Password" required><br>
+                    <input name="form_cpass" type="password" placeholder="Confirm Password" required>
                 </fieldset>
-                <fieldset>
-                    <legend>Password</legend>
-                    <input type="password" placeholder="password">
-                </fieldset>
-
-                <fieldset>
-                    <legend>Confirm Password</legend>
-                    <input type="password" placeholder="cpassword">
-                </fieldset>
-<!--                 <fieldset>
-                    <legend>Elegir pais</legend>
-                    <select name="id" id="">
-                        <option value="0"></option>
-                        <option value="0"></option>
-                        <option value="0"></option>
-                        <option value="0"></option>
-                        <option value="0"></option>
-                        <option value="0"></option>
-                    </select>
-                </fieldset> -->
-<!--                 <fieldset>
-                    <legend>comentarios</legend>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
-                </fieldset>
-                <progress value=""><progress> -->
-                <button>Enviar</button>
+                <button style="color:green">Next</button>
             </form>
-<!--             <article>
-				<h3>Vacunatón en Perú</h3>
-				<p>
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, nemo reprehenderit.
-				</p>
-			</article>
-			<article>
-				<h3>Daft punk se une otra vez!</h3>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quaerat facilis pariatur nisi aut nihil.
-				</p>
-			</article> -->
 		</main>
 		
 <!-- 		<footer>
