--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div>
 				<h3>Políticas</h3>
 				<p>Cookies</p>
-				<p>Derechos reservados</p>
+				<p>Derechos. reservados</p>
 			</div>
 		</footer> -->
 	</body>
