--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
-<html lang="es">
-	<head>
-		<!-- Info Técnica -->
-		<meta charset="UTF-8">
-		<meta name="description" content="Reto1 Semana 2">
-		<meta name="keywords" content="html5, yurak, arequipa">
-		<title>Formulario de Ingreso</title>
-        <style></style>
-        <link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<header>
-			<h1>Título Principal</h1>
-			<h2 class="subtitulo">Mensaje</h2>
-			<!-- h1 .... h6 -->
-		</header>
-		<nav>
-			<h2>Menú Principal</h2>
-			Inicio | Nosotros | Fotos | Blog | contacto
-		</nav>
-		<main>
-			<h2 id="nuevoForm">Nuevo Formulario</h2>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	<header>
+		<h1>Formulario de Registro</h1>
+	</header>
+	<main>
+		<section>
+			<h2>ingreso de datos</h2>
 			<form action="">
-                <fieldset>
-                    <input name="form_email" type="email" placeholder="Email" required><br>
-                    <input name="form_pass" type="password" placeholder="Password" required><br>
-                    <input name="form_cpass" type="password" placeholder="Confirm Password" required><br>
-                    <div>
-                        <button>Next</button>
-                    </div>
-                </fieldset>
+				<label for="nombres">Nombres</label>
+				<input type="text"
+						id="nombres"
+						placeholder="Ej. Inti Tupac"
+				>
+				<br>
+				<label for="apellidos">Apellidos</label>
+				<input type="text"
+						id="apellidos"
+						placeholder="Ej. Mamani Quispe"
+				>
+				<br>
+				<label for="email">Email</label>
+				<input type="email"
+						id="email"
+						placeholder="usuario@dominio.com"
+				>
+				<br>
+				<label for="contrasena">Contrasenia</label>
+				<input type="password"
+						id="contrasena"
+						placeholder="Minimo 6 caracteres"
+				>
+			</form>
+		</section>
 
-            </form>
-		</main>
-		
-
-	</body>
+	</main>
+	
+</body>
 </html>
