--- a/reto/index.html
+++ b/reto/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Reto1 Semana 2">
 		<meta name="keywords" content="html5, yurak, arequipa">
-		<title>Formulario de Ingreso</title>
+		<title>Formulario de Ingresoo</title>
         <style></style>
         <link rel="stylesheet" href="style.css">
 	</head>
