--- a/reto/index.html
+++ b/reto/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<main>
-			<h2 id="nuevoForm">Nuevo Formulario</h2>
+			<h2 id="nuevoForm">Nuevo Formularioo</h2>
 			<form action="">
                 <fieldset>
                     <input name="form_email" type="email" placeholder="Email" required><br>
